# filament

./: .gitignore  BATTLE_PLAN.md  BUILD.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  Makefile  REVIEW.md  TODO-AUDIT.md  bpi-r4.dtb  bpi-r4.dts  build-qemu.sh  build.sh  test.sh  working.md  x
.cargo/: config.toml
deepwiki/: Initialization Flow | openwrt:mt76 | DeepWiki.webarchive
docs/: KERNEL_IMPROVEMENTS.md  MASTER_PLAN.md  PRINCIPLES.md  README.md  REMEDIATION_PLAN.md  USB.md
docs/architecture/: BRIDGE_GROUPS.md  DRIVER_STACK.md  HARDWARE_DISCOVERY.md  IPC_REDESIGN.md  LIBF.md  OVERVIEW.md  PACKET_ACCELERATION.md  PORT_ENUMERATION.md  SCHEDULER_DESIGN_V2.md  SCHEDULER_REDESIGN.md  STATE-MACHINES.md
docs/decisions/: ADR.md
docs/drivers/mt7996-linux/: MT7996_REFERENCE.md  deepwiki.md  dma.c
docs/roadmap/: FUTURE-CAPABILITIES.md  POLICY-DAEMONS.md
docs/subsystems/: EVENTS.md  LOGGING.md  SECURITY.md  TRACING.md
scripts/: deploy-sd.sh  deploy-tftp.sh  serial.sh
src/: addrspace.rs  boot.S  dtb.rs  elf.rs  event.rs  fd.rs  gic.rs  i2c.rs  initrd.rs  ipc.rs  klog.rs  ktrace.rs  lib.rs  linker-qemu.ld  linker.ld  log.rs  main.rs  mmu.rs  panic.rs  platform.rs  pmm.rs  port.rs  process.rs  ramfs.rs  scheme.rs  sd.rs  serialize.rs  shmem.rs  smp.rs  syscall.rs  task.rs  timer.rs  uaccess.rs  uart.rs  usb.rs
src/arch/aarch64/: boot.S  hal.rs  mmio.rs  mmu.rs  mod.rs  smp.rs  sync.rs  tlb.rs
src/hal/: context.rs  cpu.rs  mod.rs
src/kernel/: addrspace.rs  addrspace_impl.rs  arch.rs  blocking.rs  bus.rs  caps.rs  dma_pool.rs  elf.rs  error.rs  event.rs  fd.rs  fdt.rs  hw_poll.rs  idle.rs  ipc.rs  irq.rs  liveness.rs  lock.rs  log.rs  memory.rs  memory_ops_impl.rs  microtask.rs  misc_ops_impl.rs  mod.rs  object_ops_impl.rs  object_service.rs  percpu.rs  pmm.rs  pmm_impl.rs  port.rs  process.rs  process_impl.rs  process_ops_impl.rs  raw_object_ops_impl.rs  sched.rs  sched_impl.rs  scheme.rs  security_log.rs  shmem.rs  shmem_impl.rs  (+9 more)
src/kernel/bus/: config.rs  controller.rs  hw_pcie.rs  hw_usb.rs  mod.rs  protocol.rs  types.rs
src/kernel/handle/: channel.rs  child_exit.rs  console.rs  klog.rs  mod.rs  port.rs  shmem.rs  timer.rs  traits.rs
src/kernel/ipc/: backend.rs  channel.rs  error.rs  mod.rs  port.rs  queue.rs  table.rs  tests.rs  traits.rs  types.rs  waker.rs
src/kernel/object/: handle.rs  mod.rs  syscall.rs  types.rs
src/kernel/pci/: config.rs  device.rs  host.rs  mod.rs  msi.rs
src/kernel/syscall/: memory.rs  misc.rs  mod.rs  pci.rs  process.rs  shmem.rs
src/kernel/task/: eviction.rs  lifecycle.rs  mod.rs  policy.rs  state.rs  tcb.rs
src/kernel/traits/: addrspace.rs  ipc.rs  memory.rs  memory_ops.rs  misc_ops.rs  mod.rs  object_ops.rs  process.rs  process_ops.rs  raw_object_ops.rs  sched.rs  syscall_ctx.rs  task.rs  user_access.rs  waker.rs
src/kernel/vm/: mapping.rs  mod.rs  object.rs  page_frame.rs
src/platform/: mod.rs
src/platform/mt7988/: bus.rs  eth.rs  gic.rs  i2c.rs  mod.rs  platform.rs  sd.rs  timer.rs  uart.rs  wdt.rs
src/platform/qemu_virt/: bus.rs  gic.rs  mod.rs  platform.rs  timer.rs  uart.rs
user/: build.sh  mkinitrd.sh
user/.cargo/: config.toml
user/abi/: Cargo.toml
user/abi/src/: lib.rs
user/driver/consoled/: Cargo.toml
user/driver/devd/: Cargo.toml
user/driver/devd/src/: deps.rs  devices.rs  effects.rs  main.rs  manager.rs  ports.rs  process.rs  query.rs  rules.rs  service.rs
user/driver/devd/src/state/: driver.rs  mod.rs
user/driver/devd/src/supervisor/: mod.rs  process.rs
user/driver/ethd/: Cargo.toml
user/driver/ethd/src/: main.rs  uboot_mtk_eth.rs
user/driver/fatfs/: Cargo.toml
user/driver/fatfs2/: Cargo.toml
user/driver/fatfsd/: Cargo.toml
user/driver/gpio/: Cargo.toml
user/driver/ipd/: Cargo.toml
user/driver/ipd/src/: device.rs  main.rs  rsh.rs  tftp.rs
user/driver/logd/: Cargo.toml
user/driver/msc/: Cargo.toml
user/driver/mt7996/: Cargo.toml  MT7996_INIT.md
user/driver/netd/: Cargo.toml
user/driver/netsvc/: Cargo.toml
user/driver/nvmed/: Cargo.toml
user/driver/partd/: Cargo.toml
user/driver/partition/: Cargo.toml  user.ld
user/driver/pcie/: Cargo.toml
user/driver/pcied/: Cargo.toml
user/driver/pcied/src/: main.rs
user/driver/pciepoke/: Cargo.toml  user.ld
user/driver/pciepoke/src/: main.rs
user/driver/probed/: Cargo.toml
user/driver/pwm/: Cargo.toml
user/driver/qemu-usbd/: Cargo.toml
user/driver/qemu-usbd/src/: block_service.rs  main.rs  partition.rs  transport.rs  xhci_bulk.rs
user/driver/switchd/: Cargo.toml
user/driver/usb/: ARCHITECTURE.md  Cargo.toml
user/driver/usb/src/: block_client.rs  consts.rs  controller.rs  enumeration.rs  hal.rs  hub.rs  lib.rs  mmio.rs  msc.rs  phy.rs  protocol.rs  ring.rs  transfer.rs  trb.rs  usb.rs  xhci.rs
user/driver/usb/src/board/: bpi_r4.rs  mod.rs
user/driver/usb/src/phy/: mod.rs  mt7988a.rs
user/driver/usb/src/soc/: mod.rs  mt7988a.rs
user/driver/usb/src/xhci/: controller.rs  helpers.rs  mod.rs  regs.rs
user/driver/usbd/: Cargo.toml
user/driver/usbd-legacy/: Cargo.toml
user/driver/usbd/src/: block.rs  device.rs  main.rs  xhci_bulk.rs
user/driver/usbd2/: Cargo.toml
user/driver/vfsd/: Cargo.toml
user/driver/wifid/: Cargo.toml
user/driver/wifid2/: Cargo.toml
user/driver/wifid2/src/: main.rs
user/driver/wifid3/: Cargo.toml
user/driver/xhcid/: Cargo.toml
user/gpio/: Cargo.toml
user/libf/: Cargo.toml
user/libf/src/: fmt.rs  io.rs  lib.rs  parse.rs  str.rs
user/shell/: Cargo.toml
user/shell/src/: color.rs  completion.rs  console.rs  cwd.rs  input_box.rs  main.rs  output.rs  readline.rs
user/src/: linker.ld
user/test/test_exit_ok/: Cargo.toml
user/test/test_ipc_flood/: Cargo.toml
user/test/test_mux_stress/: Cargo.toml
user/test/test_spawn_storm/: Cargo.toml
user/test/testr/: Cargo.toml
user/usbtest/: Cargo.toml
user/usbtest/src/: main.rs
user/userlib/: Cargo.toml
user/userlib/src/: ansi.rs  blk.rs  blk_client.rs  bus.rs  bus_block.rs  bus_runtime.rs  bus_transport.rs  config.rs  (+25 more)
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: main.rs
(+107 files in other folders)
