[package]
name = "bpi-r4-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Bare-metal kernel for Banana Pi BPI-R4 (MT7988A)"

[lib]
name = "bpi_r4_kernel"
path = "src/lib.rs"
# Enable tests for pure-logic modules only
test = true

[[bin]]
name = "bpi-r4-kernel"
path = "src/main.rs"
# Binary is no_std, no test harness
test = false

[features]
default = ["embed-initrd", "embed-dtb", "platform-mt7988a"]
embed-initrd = []  # Embed user/initrd.tar in kernel binary
embed-dtb = []     # Embed bpi-r4.dtb in kernel binary
selftest = []      # Run self-tests during boot (slows boot, useful for dev)
mock = []          # Enable mock implementations for unit testing

# Platform selection (exactly one must be enabled)
platform-mt7988a = []    # BPI-R4 hardware (MediaTek MT7988A)
platform-qemu-virt = []  # QEMU virt machine for testing

[dependencies]
abi = { path = "user/abi" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
