[package]
name = "devd"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../userlib" }
abi = { path = "../../abi" }

[features]
default = []
stress-test = []

[profile.release]
# Changed from opt-level = "s" to "2" to fix x29 frame pointer bug
# With "s", the compiler generated code that didn't properly maintain x29,
# causing a NULL pointer crash during array initialization (FAR=0, x29=0)
opt-level = 2
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # No unwinding
strip = false         # Keep symbols for debugging
