[package]
name = "ethd"
version = "0.1.0"
edition = "2021"
description = "MT7988 native Ethernet driver (GMAC1 + internal switch)"

[dependencies]
userlib = { path = "../../userlib" }

[profile.release]
opt-level = "s"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # No unwinding
strip = true          # Strip symbols
