[package]
name = "pcied"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../userlib" }

[profile.release]
opt-level = "s"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # No unwinding
strip = false         # Keep symbols for crash diagnosis
debug = 1             # Line tables for addr2line
