[package]
name = "qemu-usbd"
version = "0.1.0"
edition = "2021"
description = "USB driver for QEMU virt (standard xHCI via PCI)"

[dependencies]
userlib = { path = "../../userlib" }
usb = { path = "../usb" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
