[package]
name = "usb"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
# MT7988A-specific SoC wrapper, PHY, and board code
mt7988a = []
# Block device client (requires ring buffer protocol)
block-client = []
# Everything for usbd on MT7988A
usbd = ["mt7988a", "block-client"]

[dependencies]
userlib = { path = "../../userlib" }
