[package]
name = "usbd"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../userlib" }
usb = { path = "../usb" }

[profile.release]
opt-level = "s"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # No unwinding
strip = true          # Strip symbols
