[package]
name = "usbd"
version = "0.1.0"
edition = "2021"
description = "USB host controller driver (xHCI, bus framework)"

[dependencies]
userlib = { path = "../../userlib" }
usb = { path = "../usb", features = ["mt7988a"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
