[package]
name = "wifid2"
version = "0.1.0"
edition = "2024"

# WiFi Daemon v2 - Uses mt7996_v2 (EXACT Linux translation)
#
# This daemon implements the EXACT initialization sequence
# from Linux mt76/mt7996 driver for firmware loading.

[[bin]]
name = "wifid2"
path = "src/main.rs"

[dependencies]
userlib = { path = "../../userlib" }
pcie = { path = "../pcie" }
mt7996_v2 = { path = "../mt7996_v2" }
